--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.6"
   },
-  "dependencies": {}
+  "dependencies": {
+    "fullcalendar": "^3.10.0",
+    "moment": "^2.24.0",
+    "perfect-scrollbar": "^1.4.0"
+  }
 }
