--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "fullcalendar": "^3.10.0",
     "moment": "^2.24.0",
-    "perfect-scrollbar": "^1.4.0"
+    "perfect-scrollbar": "^1.4.0",
+    "rateyo": "^2.3.5"
   }
 }
